--- a/01-yad/lib/sparky-aptus-appcenter/graphics-editors.html
+++ b/01-yad/lib/sparky-aptus-appcenter/graphics-editors.html
@@ -3,7 +3,7 @@
 <!-- 
 APTus AppCenter by pavroo <pavroo@onet.eu> 2018
 License: GNU GPL 3
-Last update: July 25, 2020 by pavroo
+Last update: October 4, 2020 by pavroo
 -->
 	<head>
 		<title>Graphics -> Editors | APTus AppCenter</title>
@@ -49,12 +49,14 @@ Last update: July 25, 2020 by pavroo
 		</td>
 		<td><a href="aptus://graedi_dia" class="button1"><img src="images/dia.svg" class="appicon"><br />Dia</a>
 		</td>
+		<td><a href="aptus://graedi_drawing" class="button1"><img src="images/gnome-paint.svg" class="appicon"><br />Drawing</a>
+		</td>
+	</tr>
+	<tr>
 		<!--<td><a href="aptus://graedi_fotoxx" class="button1"><img src="images/gnome-photos.svg" class="appicon"><br />Fotoxx</a>
 		</td>-->
 		<td><a href="aptus://graedi_freecad" class="button1"><img src="images/freecad.svg" class="appicon"><br />FreeCAD</a>
 		</td>
-	</tr>
-	<tr>
 		<td><a href="aptus://graedi_gimp" class="button1"><img src="images/gimp.svg" class="appicon"><br />GIMP</a>
 		</td>
 		<td><a href="aptus://graedi_gnome-paint" class="button1"><img src="images/gnome-paint.svg" class="appicon"><br />GNOME Paint</a>
@@ -65,10 +67,10 @@ Last update: July 25, 2020 by pavroo
 		</td>
 		<td><a href="aptus://graedi_inkscape" class="button1"><img src="images/inkscape.svg" class="appicon"><br />Inkscape</a>
 		</td>
-		<td><a href="aptus://graedi_ipe" class="button1"><img src="images/krita.svg" class="appicon"><br />Ipe</a>
-		</td>
 	</tr>
 	<tr>
+		<td><a href="aptus://graedi_ipe" class="button1"><img src="images/krita.svg" class="appicon"><br />Ipe</a>
+		</td>
 		<!--<td><a href="aptus://graedi_k3d" class="button1"><img src="images/gcolor2.svg" class="appicon"><br />K-3D</a>
 		</td>-->
 		<td><a href="aptus://graedi_karbon" class="button1"><img src="images/gcolor2.svg" class="appicon"><br />Karbon</a>
@@ -81,10 +83,10 @@ Last update: July 25, 2020 by pavroo
 		</td>
 		<td><a href="aptus://graedi_meshlab" class="button1"><img src="images/krita.svg" class="appicon"><br />Meshlab</a>
 		</td>
-		<td><a href="aptus://graedi_mm3d" class="button1"><img src="images/krita.svg" class="appicon"><br />mm3d</a>
-		</td>
 	</tr>
 	<tr>
+		<td><a href="aptus://graedi_mm3d" class="button1"><img src="images/krita.svg" class="appicon"><br />mm3d</a>
+		</td>
 		<td><a href="aptus://graedi_opentoonz" class="button1"><img src="images/totem.svg" class="appicon"><br />OpenToonz</a>
 		</td>
 		<td><a href="aptus://graedi_photoflare" class="button1"><img src="images/krita.svg" class="appicon"><br />Photoflare</a>
@@ -95,10 +97,10 @@ Last update: July 25, 2020 by pavroo
 		</td>
 		<td><a href="aptus://graedi_tetradraw" class="button1"><img src="images/krita.svg" class="appicon"><br />Tetradraw</a>
 		</td>
-		<td><a href="aptus://graedi_textdraw" class="button1"><img src="images/krita.svg" class="appicon"><br />Textdraw</a>
-		</td>
 	</tr>
 	<tr>
+		<td><a href="aptus://graedi_textdraw" class="button1"><img src="images/krita.svg" class="appicon"><br />Textdraw</a>
+		</td>
 		<td><a href="aptus://graedi_tuxpaint" class="button1"><img src="images/krita.svg" class="appicon"><br />Tux Paint</a>
 		</td>
 		<td><a href="aptus://graedi_view3dscene" class="button1"><img src="images/krita.svg" class="appicon"><br />View 3D Scene</a>
