--- a/01-yad/lib/sparky-aptus-appcenter/media-audioplayers.html
+++ b/01-yad/lib/sparky-aptus-appcenter/media-audioplayers.html
@@ -3,7 +3,7 @@
 <!-- 
 APTus AppCenter by pavroo <pavroo@onet.eu> 2018
 License: GNU GPL 3
-Last update: June 18, 2020 by pavroo
+Last update: October 13, 2020 by pavroo
 -->
 	<head>
 		<title>Multimedia -> Audio Players | APTus AppCenter</title>
@@ -41,8 +41,6 @@ Last update: June 18, 2020 by pavroo
 	<tr>
 		<td><a href="aptus://audpla_alsaplayer-gtk" class="button1"><img src="images/gnome-audio.svg" class="appicon"><br />AlsaPlayer GUI</a>
 		</td>
-		<!--<td><a href="aptus://audpla_amarok" class="button1"><img src="images/amarok.svg" class="appicon"><br />Amarok</a>
-		</td>-->
 		<td><a href="aptus://audpla_ario" class="button1"><img src="images/gnome-audio.svg" class="appicon"><br />Ario</a>
 		</td>
 		<td><a href="aptus://audpla_audacious" class="button1"><img src="images/audacious.svg" class="appicon"><br />Audacious</a>
@@ -65,14 +63,14 @@ Last update: June 18, 2020 by pavroo
 		</td>
 		<td><a href="aptus://audpla_dradio" class="button1"><img src="images/radio.svg" class="appicon"><br />Dradio</a>
 		</td>
-		<td><a href="aptus://audpla_exaile" class="button1"><img src="images/gnome-music.svg" class="appicon"><br />Exaile</a>
+		<td><a href="aptus://audpla_elisa" class="button1"><img src="images/gnome-audio.svg" class="appicon"><br />Elisa</a>
 		</td>
 	</tr>
 	<tr>
+		<td><a href="aptus://audpla_exaile" class="button1"><img src="images/gnome-music.svg" class="appicon"><br />Exaile</a>
+		</td>
 		<td><a href="aptus://audpla_gmerlin" class="button1"><img src="images/gnome-music.svg" class="appicon"><br />Gmerlin</a>
 		</td>
-		<!--<td><a href="aptus://audpla_gmusicbrowser" class="button1"><img src="images/gnome-music.svg" class="appicon"><br />gmusicbrowser</a>
-		</td>-->
 		<td><a href="aptus://audpla_gnome-music" class="button1"><img src="images/gnome-music.svg" class="appicon"><br />GNOME Music</a>
 		</td>
 		<td><a href="aptus://audpla_gogglesmm" class="button1"><img src="images/gnome-audio.svg" class="appicon"><br />Goggles Music Manager</a>
@@ -81,71 +79,65 @@ Last update: June 18, 2020 by pavroo
 		</td>
 		<td><a href="aptus://audpla_gradio" class="button1"><img src="images/radio.svg" class="appicon"><br />Gradio</a>
 		</td>
-		<td><a href="aptus://audpla_gxmms2" class="button1"><img src="images/gnome-audio.svg" class="appicon"><br />GXMMS2</a>
-		</td>
 	</tr>
 	<tr>
-		<!--<td><a href="aptus://audpla_jajuk" class="button1"><img src="images/gnome-audio.svg" class="appicon"><br />Jajuk</a>
-		</td>-->
-		<td><a href="aptus://audpla_juk" class="button1"><img src="images/juk.svg" class="appicon"><br />JuK</a>
+		<td><a href="aptus://audpla_gxmms2" class="button1"><img src="images/gnome-audio.svg" class="appicon"><br />GXMMS2</a>
 		</td>
-		<!--<td><a href="aptus://audpla_kscd" class="button1"><img src="images/gnome-audio.svg" class="appicon"><br />KsCD</a>
+		<td><a href="aptus://audpla_juk" class="button1"><img src="images/juk.svg" class="appicon"><br />JuK</a>
 		</td>
 		<td><a href="aptus://audpla_kradio4" class="button1"><img src="images/radio.svg" class="appicon"><br />Kradio4</a>
 		</td>-->
 		<td><a href="aptus://audpla_lxmusic" class="button1"><img src="images/gnome-audio.svg" class="appicon"><br />LXMusic</a>
 		</td>
+		<td><a href="aptus://audpla_mellowplayer" class="button1"><img src="images/gnome-music.svg" class="appicon"><br />MellowPlayer</a>
+		</td>
 		<td><a href="aptus://audpla_moc" class="button1"><img src="images/gnome-audio.svg" class="appicon"><br />MOC</a>
 		</td>
+	</tr>
+	<tr>
 		<td><a href="aptus://audpla_mpd" class="button1"><img src="images/gnome-audio.svg" class="appicon"><br />MPD</a>
 		</td>
-		<!--<td><a href="aptus://audpla_musique" class="button1"><img src="images/play-music.svg" class="appicon"><br />Musique</a>
-		</td>-->
 		<td><a href="aptus://audpla_ncmpc" class="button1"><img src="images/gnome-audio.svg" class="appicon"><br />ncmpc</a>
 		</td>
 		<td><a href="aptus://audpla_pmrp" class="button1"><img src="images/radio.svg" class="appicon"><br />PMRP</a>
 		</td>
-	</tr>
-	<tr>
 		<td><a href="aptus://audpla_pragha" class="button1"><img src="images/play-music.svg" class="appicon"><br />Pragha</a>
 		</td>
 		<td><a href="aptus://audpla_qmmp" class="button1"><img src="images/gnome-music.svg" class="appicon"><br />QMMP</a>
 		</td>
 		<td><a href="aptus://audpla_quodlibet" class="button1"><img src="images/gnome-audio.svg" class="appicon"><br />Quod Libet</a>
 		</td>
+	</tr>
+	<tr>
 		<td><a href="aptus://audpla_radio" class="button1"><img src="images/radio.svg" class="appicon"><br />Radio</a>
 		</td>
 		<td><a href="aptus://audpla_radiostation" class="button1"><img src="images/radio.svg" class="appicon"><br />RadioStation</a>
 		</td>
 		<td><a href="aptus://audpla_rhythmbox" class="button1"><img src="images/gnome-music.svg" class="appicon"><br />Rhythmbox</a>
 		</td>
-	</tr>
-	<tr>
 		<td><a href="aptus://audpla_sayonara" class="button1"><img src="images/gnome-music.svg" class="appicon"><br />Sayonara</a>
 		</td>
 		<td><a href="aptus://audpla_silverjuke" class="button1"><img src="images/gnome-music.svg" class="appicon"><br />Silverjuke</a>
 		</td>
 		<td><a href="aptus://audpla_sonata" class="button1"><img src="images/cantata.svg" class="appicon"><br />Sonata</a>
 		</td>
+	</tr>
+	<tr>
 		<td><a href="aptus://audpla_sparky-play" class="button1"><img src="images/mpv.svg" class="appicon"><br />Sparky Play MP3</a>
 		</td>
 		<td><a href="aptus://audpla_sparky-player" class="button1"><img src="images/mpv.svg" class="appicon"><br />Sparky Player</a>
 		</td>
 		<td><a href="aptus://audpla_spotify-client" class="button1"><img src="images/spotify.svg" class="appicon"><br />Spotify Client</a>
 		</td>
-	</tr>
-	<tr>
 		<td><a href="aptus://audpla_strawberry" class="button1"><img src="images0/strawberry.svg" class="appicon"><br />Strawberry</a>
 		</td>
 		<td><a href="aptus://audpla_stretchplayer" class="button1"><img src="images/gnome-player.svg" class="appicon"><br />StretchPlayer</a>
 		</td>
 		<td><a href="aptus://audpla_xmms2" class="button1"><img src="images/gnome-audio.svg" class="appicon"><br />XMMS2</a>
 		</td>
+	</tr>
+	<tr>
 		<td><a href="aptus://audpla_yarock" class="button1"><img src="images/gnome-music.svg" class="appicon"><br />Yarock</a>
-		</td>
-		<td>
-		</td>
-		<td>
 		</td>
 	</tr>
 </tbody>
