--- a/01-yad/lib/sparky-aptus-appcenter/office-note.html
+++ b/01-yad/lib/sparky-aptus-appcenter/office-note.html
@@ -3,7 +3,7 @@
 <!-- 
 APTus AppCenter by pavroo <pavroo@onet.eu> 2018
 License: GNU GPL 3
-Last update: August 8, 2020 by pavroo
+Last update: September 26, 2020 by pavroo
 -->
 	<head>
 		<title>Office -> Notes | APTus AppCenter</title>
@@ -39,30 +39,28 @@ Last update: August 8, 2020 by pavroo
 <div class="column18">
 <tbody>
 	<tr>
+		<td><a href="aptus://offnot_cherrytree" class="button1"><img src="images/cherrytree.svg" class="appicon"><br />Cherrytree</a>
+		</td>
 		<td><a href="aptus://offnot_feathernotes" class="button1"><img src="images/tomboy.svg" class="appicon"><br />Feathernotes</a>
 		</td>
 		<td><a href="aptus://offnot_gnote" class="button1"><img src="images/tomboy.svg" class="appicon"><br />Gnote</a>
 		</td>
 		<td><a href="aptus://offnot_joplin" class="button1"><img src="images/tomboy.svg" class="appicon"><br />Joplin</a>
 		</td>
-		<!--<td><a href="aptus://offnot_keepnote" class="button1"><img src="images/tomboy.svg" class="appicon"><br />Keepnote</a>
-		</td>-->
 		<td><a href="aptus://offnot_kjots" class="button1"><img src="images/knotes.svg" class="appicon"><br />Kjots</a>
 		</td>
 		<td><a href="aptus://offnot_knotes" class="button1"><img src="images/knotes.svg" class="appicon"><br />Knotes</a>
 		</td>
-		<td><a href="aptus://offnot_nixnote2" class="button1"><img src="images/tomboy.svg" class="appicon"><br />NixNote</a>
-		</td>
 	</tr>
 	<tr>
+		<td><a href="aptus://offnot_nixnote2" class="button1"><img src="images/tomboy.svg" class="appicon"><br />NixNote</a>
+		</td>
 		<td><a href="aptus://offnot_noblenote" class="button1"><img src="images/tomboy.svg" class="appicon"><br />Noblenote</a>
 		</td>
 		<td><a href="aptus://offnot_note" class="button1"><img src="images/tomboy.svg" class="appicon"><br />Note</a>
 		</td>
 		<td><a href="aptus://offnot_rhinote" class="button1"><img src="images/tomboy.svg" class="appicon"><br />Rhinote</a>
 		</td>
-		<!--<td><a href="aptus://offnot_xfce4-notes" class="button1"><img src="images/knotes.svg" class="appicon"><br />Xfce4 Notes</a>
-		</td>-->
 	</tr>
 </tbody>
 </div>
