--- a/01-yad/lib/sparky-aptus-appcenter/accessories-others.html
+++ b/01-yad/lib/sparky-aptus-appcenter/accessories-others.html
@@ -3,7 +3,7 @@
 <!-- 
 APTus AppCenter by pavroo <pavroo@onet.eu> 2018
 License: GNU GPL 3
-Last update: September 16, 2020 by pavroo
+Last update: October 18, 2020 by pavroo
 -->
 	<head>
 		<title>Accessories -> Others | APTus AppCenter</title>
@@ -43,7 +43,7 @@ Last update: September 16, 2020 by pavroo
 		</td>
 		<td><a href="aptus://accoth_alltray" class="button1"><img src="images1/panel.svg" class="appicon"><br />AllTray</a>
 		</td>
-		<td><a href="aptus://accoth_cairo-dock" class="button1"><img src="images1/cairo-dock.svg" class="appicon"><br />Cairo Dock</a>
+		<td><a href="aptus://accoth_cairo-dock-core" class="button1"><img src="images1/cairo-dock.svg" class="appicon"><br />Cairo Dock</a>
 		</td>
 		<td><a href="aptus://accoth_catfish" class="button1"><img src="images1/catfish.svg" class="appicon"><br />Catfish</a>
 		</td>
