--- a/01-yad/lib/sparky-aptus-appcenter/desktops.html
+++ b/01-yad/lib/sparky-aptus-appcenter/desktops.html
@@ -3,7 +3,7 @@
 <!-- 
 APTus AppCenter by pavroo <pavroo@onet.eu> 2018
 License: GNU GPL 3
-Last update: July 3, 2020 by pavroo
+Last update: October , 2020 by pavroo15
 -->
 	<head>
 		<title>Desktops | APTus AppCenter</title>
@@ -91,10 +91,12 @@ Last update: July 3, 2020 by pavroo
 		</td>
 		<td><a href="aptus://environment_trinity" class="button1"><img src="images0/tde.png" class="appicon"><br />Trinity</a>
 		</td>
-		<td><a href="aptus://environment_wmaker" class="button1"><img src="images0/wmaker.png" class="appicon"><br />WindowMaker</a>
+		<td><a href="aptus://environment_ukui" class="button1"><img src="images/default-icon.png" class="appicon"><br />UKUI</a>
 		</td>
 	</tr>
 	<tr>
+		<td><a href="aptus://environment_wmaker" class="button1"><img src="images0/wmaker.png" class="appicon"><br />WindowMaker</a>
+		</td>
 		<td><a href="aptus://environment_xfce" class="button1"><img src="images0/xfce.png" class="appicon"><br />Xfce</a>
 		</td>
 	</tr>
