--- a/01-yad/lib/sparky-aptus-appcenter/development.html
+++ b/01-yad/lib/sparky-aptus-appcenter/development.html
@@ -3,7 +3,7 @@
 <!-- 
 APTus AppCenter by pavroo <pavroo@onet.eu> 2018
 License: GNU GPL 3
-Last update: September 16, 2020 by pavroo
+Last update: September 20, 2020 by pavroo
 -->
 	<head>
 		<title>Development | APTus AppCenter</title>
@@ -59,14 +59,16 @@ Last update: September 16, 2020 by pavroo
 		</td>
 		<td><a href="aptus://devtoo_bpftrace" class="button1"><img src="images/default-icon.svg" class="appicon"><br />BPFtrace</a>
 		</td>
+		<td><a href="aptus://devtoo_brackets" class="button1"><img src="images/documents.svg" class="appicon"><br />Brackets</a>
+		</td>
 		<td><a href="aptus://devtoo_codeblocks" class="button1"><img src="images/codeblocks.svg" class="appicon"><br />Code::Blocks</a>
 		</td>
 		<td><a href="aptus://devtoo_codelite" class="button1"><img src="images/text-script.svg" class="appicon"><br />CodeLite</a>
 		</td>
-		<td><a href="aptus://devtoo_coinor-csdp" class="button1"><img src="images/default-icon.svg" class="appicon"><br />CSDP</a>
-		</td>
 	</tr>
 	<tr>
+		<td><a href="aptus://devtoo_coinor-csdp" class="button1"><img src="images/default-icon.svg" class="appicon"><br />CSDP</a>
+		</td>
 		<td><a href="aptus://devtoo_cudatext" class="button1"><img src="images/text-editor.svg" class="appicon"><br />Cudatext</a>
 		</td>
 		<td><a href="aptus://devtoo_edi" class="button1"><img src="images/text-script.svg" class="appicon"><br />EDI</a>
@@ -77,10 +79,10 @@ Last update: September 16, 2020 by pavroo
 		</td>
 		<td><a href="aptus://devtoo_enventor" class="button1"><img src="images/text-script.svg" class="appicon"><br />Enventor</a>
 		</td>
-		<td><a href="aptus://devtoo_eric" class="button1"><img src="images/python.svg" class="appicon"><br />Eric</a>
-		</td>
 	</tr>
 	<tr>
+		<td><a href="aptus://devtoo_eric" class="button1"><img src="images/python.svg" class="appicon"><br />Eric</a>
+		</td>
 		<td><a href="aptus://devtoo_erlang-observer" class="button1"><img src="images/default-icon.svg" class="appicon"><br />Erlang Observer</a>
 		</td>
 		<td><a href="aptus://devtoo_gambas3-ide" class="button1"><img src="images/default-icon.svg" class="appicon"><br />Gambas IDE</a>
@@ -91,10 +93,10 @@ Last update: September 16, 2020 by pavroo
 		</td>
 		<td><a href="aptus://devtoo_git" class="button1"><img src="images/git.svg" class="appicon"><br />Git</a>
 		</td>
-		<td><a href="aptus://devtoo_gitg" class="button1"><img src="images/git.svg" class="appicon"><br />Gitg</a>
-		</td>
 	</tr>
 	<tr>
+		<td><a href="aptus://devtoo_gitg" class="button1"><img src="images/git.svg" class="appicon"><br />Gitg</a>
+		</td>
 		<td><a href="aptus://devtoo_git-gui" class="button1"><img src="images/git.svg" class="appicon"><br />Git GUI</a>
 		</td>
 		<td><a href="aptus://devtoo_gitkraken" class="button1"><img src="images/git.svg" class="appicon"><br />GitKraken</a>
@@ -105,26 +107,26 @@ Last update: September 16, 2020 by pavroo
 		</td>
 		<td><a href="aptus://devtoo_golang" class="button1"><img src="images/default-icon.svg" class="appicon"><br />Go Lang</a>
 		</td>
-		<td><a href="aptus://devtoo_groovy" class="button1"><img src="images/java.svg" class="appicon"><br />Groovy</a>
-		</td>
 	</tr>
 	<tr>
+		<td><a href="aptus://devtoo_groovy" class="button1"><img src="images/java.svg" class="appicon"><br />Groovy</a>
+		</td>
 		<td><a href="aptus://devtoo_hexyl" class="button1"><img src="images/default-icon.svg" class="appicon"><br />hexyl</a>
 		</td>
 		<td><a href="aptus://devtoo_default-jre" class="button1"><img src="images/java.svg" class="appicon"><br />Java Runtime</a>
 		</td>
-		<!--<td><a href="aptus://devtoo_jeex" class="button1"><img src="images/text-script.svg" class="appicon"><br />Jeex</a>
-		</td>-->
+		<td><a href="aptus://devtoo_jeex" class="button1"><img src="images/text-script.svg" class="appicon"><br />Jeex</a>
+		</td>
 		<td><a href="aptus://devtoo_kdevelop" class="button1"><img src="images/kdevelop.svg" class="appicon"><br />KDevelop</a>
 		</td>
 		<td><a href="aptus://devtoo_kompare" class="button1"><img src="images/text-editor.svg" class="appicon"><br />Kompare</a>
 		</td>
+	</tr>
+	<tr>
 		<td><a href="aptus://devtoo_latex-cjk-all" class="button1"><img src="images/tex.svg" class="appicon"><br />LaTeX CJK</a>
 		</td>
 		<td><a href="aptus://devtoo_latexdraw" class="button1"><img src="images/tex.svg" class="appicon"><br />LaTeXDraw</a>
 		</td>
-	</tr>
-	<tr>
 		<td><a href="aptus://devtoo_latexila" class="button1"><img src="images/tex.svg" class="appicon"><br />LaTeXila</a>
 		</td>
 		<td><a href="aptus://devtoo_latexml" class="button1"><img src="images/tex.svg" class="appicon"><br />LaTeXml</a>
@@ -133,12 +135,12 @@ Last update: September 16, 2020 by pavroo
 		</td>
 		<td><a href="aptus://devtoo_leo" class="button1"><img src="images/text-editor.svg" class="appicon"><br />Leo Editor</a>
 		</td>
+	</tr>
+	<tr>
 		<td><a href="aptus://devtoo_lyx" class="button1"><img src="images/tex.svg" class="appicon"><br />LyX</a>
 		</td>
 		<td><a href="aptus://devtoo_minizinc" class="button1"><img src="images/default-icon.svg" class="appicon"><br />MiniZinc</a>
 		</td>
-	</tr>
-	<tr>
 		<td><a href="aptus://devtoo_mono-complete" class="button1"><img src="images/default-icon.svg" class="appicon"><br />Mono</a>
 		</td>
 		<td><a href="aptus://devtoo_nim" class="button1"><img src="images/default-icon.svg" class="appicon"><br />Nim</a>
@@ -147,12 +149,12 @@ Last update: September 16, 2020 by pavroo
 		</td>
 		<td><a href="aptus://devtoo_npm" class="button1"><img src="images/javascript.svg" class="appicon"><br />npm</a>
 		</td>
+	</tr>
+	<tr>
 		<td><a href="aptus://devtoo_perl" class="button1"><img src="images/perl.svg" class="appicon"><br />Perl</a>
 		</td>
 		<td><a href="aptus://devtoo_php" class="button1"><img src="images/php.svg" class="appicon"><br />PHP</a>
 		</td>
-	</tr>
-	<tr>
 		<td><a href="aptus://devtoo_pycode-browser" class="button1"><img src="images/python.svg" class="appicon"><br />PyCode Browser</a>
 		</td>
 		<td><a href="aptus://devtoo_python3" class="button1"><img src="images/python.svg" class="appicon"><br />Python3</a>
@@ -161,12 +163,12 @@ Last update: September 16, 2020 by pavroo
 		</td>
 		<td><a href="aptus://devtoo_ruby" class="button1"><img src="images/ruby.svg" class="appicon"><br />Ruby</a>
 		</td>
+	</tr>
+	<tr>
 		<td><a href="aptus://devtoo_sigil" class="button1"><img src="images/text-editor.svg" class="appicon"><br />Sigil</a>
 		</td>
 		<td><a href="aptus://devtoo_spyder" class="button1"><img src="images/python.svg" class="appicon"><br />Spyder</a>
 		</td>
-	</tr>
-	<tr>
 		<td><a href="aptus://devtoo_subversion" class="button1"><img src="images1/vector.svg" class="appicon"><br />Subversion</a>
 		</td>
 		<td><a href="aptus://devtoo_texstudio" class="button1"><img src="images/tex.svg" class="appicon"><br />TeXstudio</a>
@@ -175,12 +177,12 @@ Last update: September 16, 2020 by pavroo
 		</td>
 		<td><a href="aptus://devtoo_tweak" class="button1"><img src="images/text-editor.svg" class="appicon"><br />Tweak</a>
 		</td>
+	</tr>
+	<tr>
 		<td><a href="aptus://devtoo_twine" class="button1"><img src="images/python.svg" class="appicon"><br />Twine</a>
 		</td>
 		<td><a href="aptus://devtoo_umbrello" class="button1"><img src="images/kde.svg" class="appicon"><br />Umbrello</a>
 		</td>
-	</tr>
-	<tr>
 		<td><a href="aptus://devtoo_valac" class="button1"><img src="images1/vala.svg" class="appicon"><br />Vala</a>
 		</td>
 		<td><a href="aptus://devtoo_valgrind" class="button1"><img src="images/system-monitor.svg" class="appicon"><br />Valgrind</a>
@@ -189,6 +191,8 @@ Last update: September 16, 2020 by pavroo
 		</td>
 		<td><a href="aptus://devtoo_codium" class="button1"><img src="images/documents.svg" class="appicon"><br />VSCodium</a>
 		</td>
+	</tr>
+	<tr>
 		<td><a href="aptus://devtoo_wxhexeditor" class="button1"><img src="images/text-script.svg" class="appicon"><br />wxHex Editor</a>
 		</td>
 	</tr>
