--- a/01-yad/lib/sparky-aptus-appcenter/desktops.html
+++ b/01-yad/lib/sparky-aptus-appcenter/desktops.html
@@ -91,7 +91,7 @@ Last update: October , 2020 by pavroo15
 		</td>
 		<td><a href="aptus://environment_trinity" class="button1"><img src="images0/tde.png" class="appicon"><br />Trinity</a>
 		</td>
-		<td><a href="aptus://environment_ukui" class="button1"><img src="images/default-icon.png" class="appicon"><br />UKUI</a>
+		<td><a href="aptus://environment_ukui" class="button1"><img src="images/default-icon.svg" class="appicon"><br />UKUI</a>
 		</td>
 	</tr>
 	<tr>
