--- a/01-yad/lib/sparky-aptus-appcenter/office-note.html
+++ b/01-yad/lib/sparky-aptus-appcenter/office-note.html
@@ -3,7 +3,7 @@
 <!-- 
 APTus AppCenter by pavroo <pavroo@onet.eu> 2018
 License: GNU GPL 3
-Last update: September 26, 2020 by pavroo
+Last update: October 18, 2020 by pavroo
 -->
 	<head>
 		<title>Office -> Notes | APTus AppCenter</title>
@@ -39,6 +39,8 @@ Last update: September 26, 2020 by pavroo
 <div class="column18">
 <tbody>
 	<tr>
+		<td><a href="aptus://offnot_boostnote" class="button1"><img src="images/tomboy.svg" class="appicon"><br />Boostnote</a>
+		</td>
 		<td><a href="aptus://offnot_cherrytree" class="button1"><img src="images/cherrytree.svg" class="appicon"><br />Cherrytree</a>
 		</td>
 		<td><a href="aptus://offnot_feathernotes" class="button1"><img src="images/tomboy.svg" class="appicon"><br />Feathernotes</a>
@@ -49,10 +51,10 @@ Last update: September 26, 2020 by pavroo
 		</td>
 		<td><a href="aptus://offnot_kjots" class="button1"><img src="images/knotes.svg" class="appicon"><br />Kjots</a>
 		</td>
-		<td><a href="aptus://offnot_knotes" class="button1"><img src="images/knotes.svg" class="appicon"><br />Knotes</a>
-		</td>
 	</tr>
 	<tr>
+		<td><a href="aptus://offnot_knotes" class="button1"><img src="images/knotes.svg" class="appicon"><br />Knotes</a>
+		</td>
 		<td><a href="aptus://offnot_nixnote2" class="button1"><img src="images/tomboy.svg" class="appicon"><br />NixNote</a>
 		</td>
 		<td><a href="aptus://offnot_noblenote" class="button1"><img src="images/tomboy.svg" class="appicon"><br />Noblenote</a>
