--- a/01-yad/lib/sparky-aptus-appcenter/system-kernel.html
+++ b/01-yad/lib/sparky-aptus-appcenter/system-kernel.html
@@ -3,7 +3,7 @@
 <!-- 
 APTus AppCenter by pavroo <pavroo@onet.eu> 2018
 License: GNU GPL 3
-Last update: June 26, 2020 by pavroo
+Last update: October 20, 2020 by pavroo
 -->
 	<head>
 		<title>System -> Kernel | APTus AppCenter</title>
@@ -47,6 +47,9 @@ Last update: June 26, 2020 by pavroo
 		</td>
 		<!-- install sparky kernel -->
 		<td><a href="aptus://sysker_spakernel" class="button2"><img src="images/sparky.svg" class="appicon"><br /><span><script>dict.print('apttool', 'spakernel');</script></span></a>
+		</td>
+		<!-- install xanmod kernel -->
+		<td><a href="aptus://sysker_xankernel" class="button2"><img src="images/linux2.svg" class="appicon"><br /><span><script>dict.print('apttool', 'xankernel');</script></span></a>
 		</td>
 		<!-- remove old kernel -->
 		<td><a href="aptus://sysker_remkernel" class="button2"><img src="images/default-icon.svg" class="appicon"><br /><span><script>dict.print('apttool', 'remkernel');</script></span></a>
