--- a/01-yad/lib/sparky-aptus-appcenter/net-others.html
+++ b/01-yad/lib/sparky-aptus-appcenter/net-others.html
@@ -3,7 +3,7 @@
 <!-- 
 APTus AppCenter by pavroo <pavroo@onet.eu> 2018
 License: GNU GPL 3
-Last update: August 8, 2020 by pavroo
+Last update: October 19, 2020 by pavroo
 -->
 	<head>
 		<title>Network -> Others | APTus AppCenter</title>
@@ -44,6 +44,8 @@ Last update: August 8, 2020 by pavroo
 		<td><a href="aptus://netoth_google-earth-pro-stable" class="button1"><img src="images/network.svg" class="appicon"><br />Google Earth</a>
 		</td>
 		<td><a href="aptus://netoth_megasync" class="button1"><img src="images/megasync.svg" class="appicon"><br />MegaSync</a>
+		</td>
+		<td><a href="aptus://netoth_onionshare" class="button1"><img src="images/network.svg" class="appicon"><br />OnionShare</a>
 		</td>
 		<td><a href="aptus://netoth_spideroakone" class="button1"><img src="images/network.svg" class="appicon"><br />SpiderOakONE</a>
 		</td>
