--- a/01-yad/lib/sparky-aptus-appcenter/accessories-monitoring.html
+++ b/01-yad/lib/sparky-aptus-appcenter/accessories-monitoring.html
@@ -3,7 +3,7 @@
 <!-- 
 APTus AppCenter by pavroo <pavroo@onet.eu> 2018
 License: GNU GPL 3
-Last update: July 23, 2020 by pavroo
+Last update: November 10, 2020 by pavroo
 -->
 	<head>
 		<title>Accessories -> Monitoring | APTus AppCenter</title>
@@ -39,20 +39,24 @@ Last update: July 23, 2020 by pavroo
 <div class="column18">
 <tbody>
 	<tr>
+		<td><a href="aptus://accmon_bpytop" class="button1"><img src="images/system-monitor.svg" class="appicon"><br />BPyTop</a>
+		</td>
 		<td><a href="aptus://accmon_cpuinfo" class="button1"><img src="images/cpuinfo.svg" class="appicon"><br />cpuinfo</a>
+		</td>
+		<td><a href="aptus://accmon_cpu-x" class="button1"><img src="images/cpuinfo.svg" class="appicon"><br />CPU-X</a>
 		</td>
 		<td><a href="aptus://accmon_sensors-applet" class="button1"><img src="images/system-monitor.svg" class="appicon"><br />GNOME Sensors Applet</a>
 		</td>
-		<td><a href="aptus://accmon_gnome-system-monitor" class="button1"><img src="images/system-monitor.svg" class="appicon"><br />GNME System Monitor</a>
+		<td><a href="aptus://accmon_gnome-system-monitor" class="button1"><img src="images/system-monitor.svg" class="appicon"><br />GNOME System Monitor</a>
 		</td>
 		<td><a href="aptus://accmon_gnome-usage" class="button1"><img src="images/system-monitor.svg" class="appicon"><br />GNOME Usage</a>
 		</td>
+	</tr>
+	<tr>
 		<td><a href="aptus://accmon_hardinfo" class="button1"><img src="images/hwinfo.svg" class="appicon"><br />Hardinfo</a>
 		</td>
 		<td><a href="aptus://accmon_htop" class="button1"><img src="images/htop.svg" class="appicon"><br />Htop</a>
 		</td>
-	</tr>
-	<tr>
 		<td><a href="aptus://accmon_hwinfo" class="button1"><img src="images/hwinfo.svg" class="appicon"><br />Hwinfo</a>
 		</td>
 		<td><a href="aptus://accmon_inxi" class="button1"><img src="images/terminal.svg" class="appicon"><br />Inxi</a>
@@ -61,12 +65,12 @@ Last update: July 23, 2020 by pavroo
 		</td>
 		<td><a href="aptus://accmon_lshw" class="button1"><img src="images/terminal.svg" class="appicon"><br />lshw</a>
 		</td>
+	</tr>
+	<tr>
 		<td><a href="aptus://accmon_lxtask" class="button1"><img src="images/system-monitor.svg" class="appicon"><br />LXTask</a>
 		</td>
 		<td><a href="aptus://accmon_mate-sensors-applet" class="button1"><img src="images/system-monitor.svg" class="appicon"><br />MATE Sensors Applet</a>
 		</td>
-	</tr>
-	<tr>
 		<td><a href="aptus://accmon_mate-sensors-applet-nvidia" class="button1"><img src="images/nvidia.svg" class="appicon"><br />MATE Sensors Applet NVIDIA</a>
 		</td>
 		<td><a href="aptus://accmon_mrtgutils-sensors" class="button1"><img src="images/terminal.svg" class="appicon"><br />MRTGutils Sensors</a>
@@ -75,12 +79,12 @@ Last update: July 23, 2020 by pavroo
 		</td>
 		<td><a href="aptus://accmon_nmon" class="button1"><img src="images/terminal.svg" class="appicon"><br />nmon</a>
 		</td>
+	</tr>
+	<tr>
 		<td><a href="aptus://accmon_nvtop" class="button1"><img src="images/nvidia.svg" class="appicon"><br />Nvtop</a>
 		</td>
 		<td><a href="aptus://accmon_qps" class="button1"><img src="images/system-monitor.svg" class="appicon"><br />Qps</a>
 		</td>
-	</tr>
-	<tr>
 		<td><a href="aptus://accmon_screenfetch" class="button1"><img src="images/terminal.svg" class="appicon"><br />screenFetch</a>
 		</td>
 		<td><a href="aptus://accmon_xfce4-sensors-plugin" class="button1"><img src="images/system-monitor.svg" class="appicon"><br />Xfce Sensors Plugin</a>
