--- a/01-yad/lib/sparky-aptus-appcenter/accessories-weather.html
+++ b/01-yad/lib/sparky-aptus-appcenter/accessories-weather.html
@@ -43,16 +43,14 @@ Last update: August 23, 2020 by pavroo
 		</td>
 		<td><a href="aptus://accwea_gis-weather" class="button1"><img src="images/weather.svg" class="appicon"><br />Gis Weather</a>
 		</td>
-		<td><a href="aptus://accwea_gnome-shell-extension-weather" class="button1"><img src="images/weather.svg" class="appicon"><br />GNOME Shell Extension Weather</a>
-		</td>
+		<!--<td><a href="aptus://accwea_gnome-shell-extension-weather" class="button1"><img src="images/weather.svg" class="appicon"><br />GNOME Shell Extension Weather</a>
+		</td>-->
 		<td><a href="aptus://accwea_gnome-weather" class="button1"><img src="images/weather.svg" class="appicon"><br />GNOME Weather</a>
 		</td>
 		<td><a href="aptus://accwea_weather-util" class="button1"><img src="images/terminal.svg" class="appicon"><br />Weather Util</a>
 		</td>
 		<td><a href="aptus://accwea_wmweather+" class="button1"><img src="images/weather.svg" class="appicon"><br />WMWeather+</a>
 		</td>
-	</tr>
-	<tr>
 		<td><a href="aptus://accwea_xfce4-weather-plugin" class="button1"><img src="images/weather.svg" class="appicon"><br />Xfce4 Weather Plugin</a>
 		</td>
 	</tr>
