--- a/01-yad/lib/sparky-aptus-appcenter/graphics-editors.html
+++ b/01-yad/lib/sparky-aptus-appcenter/graphics-editors.html
@@ -3,7 +3,7 @@
 <!-- 
 APTus AppCenter by pavroo <pavroo@onet.eu> 2018
 License: GNU GPL 3
-Last update: October 4, 2020 by pavroo
+Last update: November 10, 2020 by pavroo
 -->
 	<head>
 		<title>Graphics -> Editors | APTus AppCenter</title>
@@ -79,12 +79,14 @@ Last update: October 4, 2020 by pavroo
 		</td>
 		<td><a href="aptus://graedi_krita" class="button1"><img src="images/krita.svg" class="appicon"><br />Krita</a>
 		</td>
-		<td><a href="aptus://graedi_lightzone" class="button1"><img src="images/gnome-photos.svg" class="appicon"><br />LightZone</a>
+		<td><a href="aptus://graedi_lazpaint" class="button1"><img src="images/gnome-paint.svg" class="appicon"><br />LazPaint</a>
 		</td>
-		<td><a href="aptus://graedi_meshlab" class="button1"><img src="images/krita.svg" class="appicon"><br />Meshlab</a>
+		<td><a href="aptus://graedi_lightzone" class="button1"><img src="images/gnome-photos.svg" class="appicon"><br />LightZone</a>
 		</td>
 	</tr>
 	<tr>
+		<td><a href="aptus://graedi_meshlab" class="button1"><img src="images/krita.svg" class="appicon"><br />Meshlab</a>
+		</td>
 		<td><a href="aptus://graedi_mm3d" class="button1"><img src="images/krita.svg" class="appicon"><br />mm3d</a>
 		</td>
 		<td><a href="aptus://graedi_opentoonz" class="button1"><img src="images/totem.svg" class="appicon"><br />OpenToonz</a>
@@ -95,10 +97,10 @@ Last update: October 4, 2020 by pavroo
 		</td>
 		<td><a href="aptus://graedi_synfigstudio" class="button1"><img src="images/totem.svg" class="appicon"><br />Synfig Studio</a>
 		</td>
-		<td><a href="aptus://graedi_tetradraw" class="button1"><img src="images/krita.svg" class="appicon"><br />Tetradraw</a>
-		</td>
 	</tr>
 	<tr>
+		<td><a href="aptus://graedi_tetradraw" class="button1"><img src="images/krita.svg" class="appicon"><br />Tetradraw</a>
+		</td>
 		<td><a href="aptus://graedi_textdraw" class="button1"><img src="images/krita.svg" class="appicon"><br />Textdraw</a>
 		</td>
 		<td><a href="aptus://graedi_tuxpaint" class="button1"><img src="images/krita.svg" class="appicon"><br />Tux Paint</a>
