--- a/01-yad/lib/sparky-aptus-appcenter/education.html
+++ b/01-yad/lib/sparky-aptus-appcenter/education.html
@@ -77,14 +77,12 @@ Last update: September 16, 2020 by pavroo
 		</td>
 		<td><a href="aptus://educat1_dawg" class="button1"><img src="images/atom.svg" class="appicon"><br />Dawg</a>
 		</td>
-		<td><a href="aptus://educat1_drmips" class="button1"><img src="images/vbox.svg" class="appicon"><br />DrMIPS</a>
-		</td>
 		<td><a href="aptus://educat1_electric" class="button1"><img src="images/science.svg" class="appicon"><br />Electric</a>
+		</td>
+		<td><a href="aptus://educat1_elki" class="button1"><img src="images/text-script.svg" class="appicon"><br />ELKI</a>
 		</td>
 	</tr>
 	<tr>
-		<td><a href="aptus://educat1_elki" class="button1"><img src="images/text-script.svg" class="appicon"><br />ELKI</a>
-		</td>
 		<td><a href="aptus://educat1_engauge-digitizer" class="button1"><img src="images/glade.svg" class="appicon"><br />Engauge Digitizer</a>
 		</td>
 		<td><a href="aptus://educat1_expeyes" class="button1"><img src="images/science.svg" class="appicon"><br />ExpEYES</a>
@@ -95,12 +93,12 @@ Last update: September 16, 2020 by pavroo
 		</td>
 		<td><a href="aptus://educat1_fraqtive" class="button1"><img src="images/gnome-paint.svg" class="appicon"><br />Fraqtive</a>
 		</td>
-	</tr>
-	<tr>
 		<td><a href="aptus://educat1_g3data" class="button1"><img src="images/glade.svg" class="appicon"><br />g3data</a>
 		</td>
-		<!--<td><a href="aptus://educat1_gabedit" class="button1"><img src="images/science.svg" class="appicon"><br />Gabedit</a>
-		</td>-->
+	</tr>
+	<tr>
+		<td><a href="aptus://educat1_gabedit" class="button1"><img src="images/science.svg" class="appicon"><br />Gabedit</a>
+		</td>
 		<td><a href="aptus://educat1_garlic" class="button1"><img src="images/atom.svg" class="appicon"><br />Garlic</a>
 		</td>
 		<td><a href="aptus://educat1_gazebo" class="button1"><img src="images/gnome-robots.svg" class="appicon"><br />Gazebo</a>
@@ -109,7 +107,6 @@ Last update: September 16, 2020 by pavroo
 		</td>
 		<td><a href="aptus://educat1_gcompris-qt" class="button1"><img src="images/gcompris.svg" class="appicon"><br />GCompris</a>
 		</td>
-		
 		<td><a href="aptus://educat1_geogebra" class="button1"><img src="images/glade.svg" class="appicon"><br />GeoGebra</a>
 		</td>
 	</tr>
