--- a/01-yad/lib/sparky-aptus-appcenter/office-text.html
+++ b/01-yad/lib/sparky-aptus-appcenter/office-text.html
@@ -3,7 +3,7 @@
 <!-- 
 APTus AppCenter by pavroo <pavroo@onet.eu> 2018
 License: GNU GPL 3
-Last update: October 4, 2020 by pavroo
+Last update: November 10, 2020 by pavroo
 -->
 	<head>
 		<title>Office -> Text Editors | APTus AppCenter</title>
@@ -73,14 +73,16 @@ Last update: October 4, 2020 by pavroo
 		</td>
 		<td><a href="aptus://offtex_gedit" class="button1"><img src="images/text-editor.svg" class="appicon"><br />Gedit</a>
 		</td>
+		<td><a href="aptus://offtex_hiero" class="button1"><img src="images/text-editor2.svg" class="appicon"><br />Hiero</a>
+		</td>
 		<td><a href="aptus://offtex_jed" class="button1"><img src="images/text-editor2.svg" class="appicon"><br />Jed</a>
 		</td>
 		<td><a href="aptus://offtex_joe" class="button1"><img src="images/text-editor2.svg" class="appicon"><br />Joe</a>
 		</td>
-		<td><a href="aptus://offtex_juffed" class="button1"><img src="images/text-editor.svg" class="appicon"><br />JuffEd</a>
-		</td>
 	</tr>
 	<tr>
+		<td><a href="aptus://offtex_juffed" class="button1"><img src="images/text-editor.svg" class="appicon"><br />JuffEd</a>
+		</td>
 		<td><a href="aptus://offtex_jupp" class="button1"><img src="images/text-editor2.svg" class="appicon"><br />Jupp</a>
 		</td>
 		<td><a href="aptus://offtex_kate" class="button1"><img src="images/text-editor.svg" class="appicon"><br />Kate</a>
@@ -91,10 +93,10 @@ Last update: October 4, 2020 by pavroo
 		</td>
 		<td><a href="aptus://offtex_lite-editor" class="button1"><img src="images/text-editor.svg" class="appicon"><br />Lite Editor</a>
 		</td>
-		<td><a href="aptus://offtex_mousepad" class="button1"><img src="images/text-editor.svg" class="appicon"><br />Mousepad</a>
-		</td>
 	</tr>
 	<tr>
+		<td><a href="aptus://offtex_mousepad" class="button1"><img src="images/text-editor.svg" class="appicon"><br />Mousepad</a>
+		</td>
 		<td><a href="aptus://offtex_nano" class="button1"><img src="images1/nano.svg" class="appicon"><br />Nano</a>
 		</td>
 		<td><a href="aptus://offtex_notepadqq" class="button1"><img src="images1/notepadqq.svg" class="appicon"><br />NotepadQQ</a>
@@ -105,10 +107,10 @@ Last update: October 4, 2020 by pavroo
 		</td>
 		<td><a href="aptus://offtex_sed" class="button1"><img src="images/text-editor2.svg" class="appicon"><br />Sed</a>
 		</td>
-		<td><a href="aptus://offtex_tea" class="button1"><img src="images/text-editor.svg" class="appicon"><br />Tea</a>
-		</td>
 	</tr>
 	<tr>
+		<td><a href="aptus://offtex_tea" class="button1"><img src="images/text-editor.svg" class="appicon"><br />Tea</a>
+		</td>
 		<td><a href="aptus://offtex_vim" class="button1"><img src="images/vim.svg" class="appicon"><br />Vim</a>
 		</td>
 		<td><a href="aptus://offtex_vis" class="button1"><img src="images/text-editor2.svg" class="appicon"><br />Vis</a>
