--- a/01-yad/lib/sparky-aptus-appcenter/accessories-others.html
+++ b/01-yad/lib/sparky-aptus-appcenter/accessories-others.html
@@ -3,7 +3,7 @@
 <!-- 
 APTus AppCenter by pavroo <pavroo@onet.eu> 2018
 License: GNU GPL 3
-Last update: October 18, 2020 by pavroo
+Last update: December 3, 2020 by pavroo
 -->
 	<head>
 		<title>Accessories -> Others | APTus AppCenter</title>
@@ -43,20 +43,18 @@ Last update: October 18, 2020 by pavroo
 		</td>
 		<td><a href="aptus://accoth_alltray" class="button1"><img src="images1/panel.svg" class="appicon"><br />AllTray</a>
 		</td>
-		<td><a href="aptus://accoth_cairo-dock-core" class="button1"><img src="images1/cairo-dock.svg" class="appicon"><br />Cairo Dock</a>
-		</td>
+		<!--<td><a href="aptus://accoth_cairo-dock-core" class="button1"><img src="images1/cairo-dock.svg" class="appicon"><br />Cairo Dock</a>
+		</td>-->
 		<td><a href="aptus://accoth_catfish" class="button1"><img src="images1/catfish.svg" class="appicon"><br />Catfish</a>
 		</td>
 		<td><a href="aptus://accoth_ding" class="button1"><img src="images/preferences-desktop-locale.svg" class="appicon"><br />Ding</a>
 		</td>
-		<td><a href="aptus://accoth_fbpanel" class="button1"><img src="images1/panel.svg" class="appicon"><br />FBPanel</a>
-		</td>
-	</tr>
-	<tr>
 		<td><a href="aptus://accoth_gexec" class="button1"><img src="images/default-icon.svg" class="appicon"><br />gExec</a>
 		</td>
 		<td><a href="aptus://accoth_gjiten" class="button1"><img src="images/preferences-desktop-locale.svg" class="appicon"><br />Gjiten</a>
 		</td>
+	</tr>
+	<tr>
 		<td><a href="aptus://accoth_gnome-dictionary" class="button1"><img src="images/preferences-desktop-locale.svg" class="appicon"><br />GNOME Dictionary</a>
 		</td>
 		<td><a href="aptus://accoth_goldendict" class="button1"><img src="images/preferences-desktop-locale.svg" class="appicon"><br />Golden Dict</a>
@@ -65,12 +63,12 @@ Last update: October 18, 2020 by pavroo
 		</td>
 		<td><a href="aptus://accoth_i3lock-fancy" class="button1"><img src="images/screensaver.svg" class="appicon"><br />i3lock fancy</a>
 		</td>
-	</tr>
-	<tr>
 		<td><a href="aptus://accoth_kupfer" class="button1"><img src="images/default-icon.svg" class="appicon"><br />Kupfer</a>
 		</td>
 		<td><a href="aptus://accoth_light-locker" class="button1"><img src="images/screensaver.svg" class="appicon"><br />Light Locker</a>
 		</td>
+	</tr>
+	<tr>
 		<td><a href="aptus://accoth_menulibre" class="button1"><img src="images1/alacarte.svg" class="appicon"><br />MenuLibre</a>
 		</td>
 		<td><a href="aptus://accoth_nitrogen" class="button1"><img src="images/desktop.svg" class="appicon"><br />Nitrogen</a>
@@ -79,12 +77,12 @@ Last update: October 18, 2020 by pavroo
 		</td>
 		<td><a href="aptus://accoth_obconf-qt" class="button1"><img src="images1/obconf.svg" class="appicon"><br />ObConf Qt</a>
 		</td>
-	</tr>
-	<tr>
 		<td><a href="aptus://accoth_picom" class="button1"><img src="images/desktop-effects.svg" class="appicon"><br />Picom</a>
 		</td>
 		<td><a href="aptus://accoth_plank" class="button1"><img src="images/dock.svg" class="appicon"><br />Plank</a>
 		</td>
+	</tr>
+	<tr>
 		<td><a href="aptus://accoth_qreator" class="button1"><img src="images1/qtqr.svg" class="appicon"><br />Qreator</a>
 		</td>
 		<td><a href="aptus://accoth_qrencode" class="button1"><img src="images1/qtqr.svg" class="appicon"><br />Qrencode</a>
@@ -93,12 +91,12 @@ Last update: October 18, 2020 by pavroo
 		</td>
 		<td><a href="aptus://accoth_rofi" class="button1"><img src="images/default-icon.svg" class="appicon"><br />Rofi</a>
 		</td>
-	</tr>
-	<tr>
 		<td><a href="aptus://accoth_sparky-about" class="button1"><img src="images/sparky.svg" class="appicon"><br />Sparky About</a>
 		</td>
 		<td><a href="aptus://accoth_sparky-dashboard" class="button1"><img src="images1/alacarte.svg" class="appicon"><br />Sparky Dashboard</a>
 		</td>
+	</tr>
+	<tr>
 		<td><a href="aptus://accoth_sparky-picom" class="button1"><img src="images/desktop-effects.svg" class="appicon"><br />Sparky Picom</a>
 		</td>
 		<td><a href="aptus://accoth_synapse" class="button1"><img src="images/default-icon.svg" class="appicon"><br />Synapse</a>
@@ -107,12 +105,12 @@ Last update: October 18, 2020 by pavroo
 		</td>
 		<td><a href="aptus://accoth_wbar" class="button1"><img src="images/dock.svg" class="appicon"><br />Wbar</a>
 		</td>
-	</tr>
-	<tr>
 		<td><a href="aptus://accoth_wbar-config" class="button1"><img src="images/dock.svg" class="appicon"><br />Wbar Config</a>
 		</td>
 		<td><a href="aptus://accoth_xscreensaver" class="button1"><img src="images/screensaver.svg" class="appicon"><br />XScreenSaver</a>
 		</td>
+	</tr>
+	<tr>
 		<td><a href="aptus://accoth_zbarcam-qt" class="button1"><img src="images1/qtqr.svg" class="appicon"><br />ZBarcam Qt</a>
 		</td>
 	</tr>
