--- a/01-yad/lib/sparky-aptus-appcenter/development.html
+++ b/01-yad/lib/sparky-aptus-appcenter/development.html
@@ -3,7 +3,7 @@
 <!-- 
 APTus AppCenter by pavroo <pavroo@onet.eu> 2018
 License: GNU GPL 3
-Last update: September 20, 2020 by pavroo
+Last update: December 3, 2020 by pavroo
 -->
 	<head>
 		<title>Development | APTus AppCenter</title>
@@ -139,6 +139,8 @@ Last update: September 20, 2020 by pavroo
 	<tr>
 		<td><a href="aptus://devtoo_lyx" class="button1"><img src="images/tex.svg" class="appicon"><br />LyX</a>
 		</td>
+		<td><a href="aptus://devtoo_meld" class="button1"><img src="images/meld.svg" class="appicon"><br />Meld</a>
+		</td>
 		<td><a href="aptus://devtoo_minizinc" class="button1"><img src="images/default-icon.svg" class="appicon"><br />MiniZinc</a>
 		</td>
 		<td><a href="aptus://devtoo_mono-complete" class="button1"><img src="images/default-icon.svg" class="appicon"><br />Mono</a>
@@ -147,10 +149,10 @@ Last update: September 20, 2020 by pavroo
 		</td>
 		<td><a href="aptus://devtoo_nodejs" class="button1"><img src="images/javascript.svg" class="appicon"><br />Node.js</a>
 		</td>
-		<td><a href="aptus://devtoo_npm" class="button1"><img src="images/javascript.svg" class="appicon"><br />npm</a>
-		</td>
 	</tr>
 	<tr>
+		<td><a href="aptus://devtoo_npm" class="button1"><img src="images/javascript.svg" class="appicon"><br />npm</a>
+		</td>
 		<td><a href="aptus://devtoo_perl" class="button1"><img src="images/perl.svg" class="appicon"><br />Perl</a>
 		</td>
 		<td><a href="aptus://devtoo_php" class="button1"><img src="images/php.svg" class="appicon"><br />PHP</a>
@@ -161,10 +163,10 @@ Last update: September 20, 2020 by pavroo
 		</td>
 		<td><a href="aptus://devtoo_qtcreator" class="button1"><img src="images/qt.svg" class="appicon"><br />Qt Creator</a>
 		</td>
-		<td><a href="aptus://devtoo_ruby" class="button1"><img src="images/ruby.svg" class="appicon"><br />Ruby</a>
-		</td>
 	</tr>
 	<tr>
+		<td><a href="aptus://devtoo_ruby" class="button1"><img src="images/ruby.svg" class="appicon"><br />Ruby</a>
+		</td>
 		<td><a href="aptus://devtoo_sigil" class="button1"><img src="images/text-editor.svg" class="appicon"><br />Sigil</a>
 		</td>
 		<td><a href="aptus://devtoo_spyder" class="button1"><img src="images/python.svg" class="appicon"><br />Spyder</a>
@@ -175,10 +177,10 @@ Last update: September 20, 2020 by pavroo
 		</td>
 		<td><a href="aptus://devtoo_thonny" class="button1"><img src="images/python.svg" class="appicon"><br />Thonny</a>
 		</td>
-		<td><a href="aptus://devtoo_tweak" class="button1"><img src="images/text-editor.svg" class="appicon"><br />Tweak</a>
-		</td>
 	</tr>
 	<tr>
+		<td><a href="aptus://devtoo_tweak" class="button1"><img src="images/text-editor.svg" class="appicon"><br />Tweak</a>
+		</td>
 		<td><a href="aptus://devtoo_twine" class="button1"><img src="images/python.svg" class="appicon"><br />Twine</a>
 		</td>
 		<td><a href="aptus://devtoo_umbrello" class="button1"><img src="images/kde.svg" class="appicon"><br />Umbrello</a>
@@ -189,10 +191,10 @@ Last update: September 20, 2020 by pavroo
 		</td>
 		<td><a href="aptus://devtoo_code" class="button1"><img src="images/visualstudiocode.svg" class="appicon"><br />Visual Code Studio</a>
 		</td>
-		<td><a href="aptus://devtoo_codium" class="button1"><img src="images/documents.svg" class="appicon"><br />VSCodium</a>
-		</td>
 	</tr>
 	<tr>
+		<td><a href="aptus://devtoo_codium" class="button1"><img src="images/documents.svg" class="appicon"><br />VSCodium</a>
+		</td>
 		<td><a href="aptus://devtoo_wxhexeditor" class="button1"><img src="images/text-script.svg" class="appicon"><br />wxHex Editor</a>
 		</td>
 	</tr>
