--- a/01-yad/lib/sparky-aptus-appcenter/accessories-monitoring.html
+++ b/01-yad/lib/sparky-aptus-appcenter/accessories-monitoring.html
@@ -3,7 +3,7 @@
 <!-- 
 APTus AppCenter by pavroo <pavroo@onet.eu> 2018
 License: GNU GPL 3
-Last update: November 10, 2020 by pavroo
+Last update: December 3, 2020 by pavroo
 -->
 	<head>
 		<title>Accessories -> Monitoring | APTus AppCenter</title>
@@ -61,12 +61,14 @@ Last update: November 10, 2020 by pavroo
 		</td>
 		<td><a href="aptus://accmon_inxi" class="button1"><img src="images/terminal.svg" class="appicon"><br />Inxi</a>
 		</td>
+		<td><a href="aptus://accmon_linux-cpupower" class="button1"><img src="images/hwinfo.svg" class="appicon"><br />Linux CPU Power</a>
+		</td>
 		<td><a href="aptus://accmon_lm-sensors" class="button1"><img src="images/terminal.svg" class="appicon"><br />Lm-sensors</a>
 		</td>
+	</tr>
+	<tr>	
 		<td><a href="aptus://accmon_lshw" class="button1"><img src="images/terminal.svg" class="appicon"><br />lshw</a>
 		</td>
-	</tr>
-	<tr>
 		<td><a href="aptus://accmon_lxtask" class="button1"><img src="images/system-monitor.svg" class="appicon"><br />LXTask</a>
 		</td>
 		<td><a href="aptus://accmon_mate-sensors-applet" class="button1"><img src="images/system-monitor.svg" class="appicon"><br />MATE Sensors Applet</a>
@@ -77,10 +79,10 @@ Last update: November 10, 2020 by pavroo
 		</td>
 		<td><a href="aptus://accmon_netdata" class="button1"><img src="images/system-monitor.svg" class="appicon"><br />Netdata</a>
 		</td>
-		<td><a href="aptus://accmon_nmon" class="button1"><img src="images/terminal.svg" class="appicon"><br />nmon</a>
-		</td>
 	</tr>
 	<tr>
+		<td><a href="aptus://accmon_nmon" class="button1"><img src="images/terminal.svg" class="appicon"><br />nmon</a>
+		</td>
 		<td><a href="aptus://accmon_nvtop" class="button1"><img src="images/nvidia.svg" class="appicon"><br />Nvtop</a>
 		</td>
 		<td><a href="aptus://accmon_qps" class="button1"><img src="images/system-monitor.svg" class="appicon"><br />Qps</a>
@@ -91,6 +93,8 @@ Last update: November 10, 2020 by pavroo
 		</td>
 		<td><a href="aptus://accmon_xfce4-taskmanager" class="button1"><img src="images/system-monitor.svg" class="appicon"><br />Xfce Task Manager</a>
 		</td>
+	</tr>
+	<tr>
 		<td><a href="aptus://accmon_xsensors" class="button1"><img src="images/system-monitor.svg" class="appicon"><br />Xsensors</a>
 		</td>
 	</tr>
