--- a/01-yad/lib/sparky-aptus-appcenter/media-audiotools.html
+++ b/01-yad/lib/sparky-aptus-appcenter/media-audiotools.html
@@ -3,7 +3,7 @@
 <!-- 
 APTus AppCenter by pavroo <pavroo@onet.eu> 2018
 License: GNU GPL 3
-Last update: September 16, 2020 by pavroo
+Last update: December 3, 2020 by pavroo
 -->
 	<head>
 		<title>Multimedia -> Audio Tools | APTus AppCenter</title>
@@ -115,16 +115,18 @@ Last update: September 16, 2020 by pavroo
 		</td>
 		<td><a href="aptus://audtoo_setbfree" class="button1"><img src="images/gnome-audio.svg" class="appicon"><br />setBfree</a>
 		</td>
+		<td><a href="aptus://audtoo_simplest-studio" class="button1"><img src="images/gnome-audio.svg" class="appicon"><br />Simplest Studio</a>
+		</td>
 		<td><a href="aptus://audtoo_sooperlooper" class="button1"><img src="images/gnome-audio.svg" class="appicon"><br />SooperLooper</a>
 		</td>
 		<td><a href="aptus://audtoo_soundconverter" class="button1"><img src="images/sound-juicer.svg" class="appicon"><br />SoundConverter</a>
 		</td>
 		<td><a href="aptus://audtoo_snd-gtk-jack" class="button1"><img src="images/gnome-audio.svg" class="appicon"><br />Sound file editor</a>
 		</td>
+	</tr>
+	<tr>	
 		<td><a href="aptus://audtoo_sound-juicer" class="button1"><img src="images/sound-juicer.svg" class="appicon"><br />Sound-Juicer</a>
 		</td>
-	</tr>
-	<tr>
 		<td><a href="aptus://audtoo_soundkonverter" class="button1"><img src="images/sound-juicer.svg" class="appicon"><br />soundKonverter</a>
 		</td>
 		<td><a href="aptus://audtoo_sweep" class="button1"><img src="images/gnome-audio.svg" class="appicon"><br />Sweep</a>
@@ -135,10 +137,10 @@ Last update: September 16, 2020 by pavroo
 		</td>
 		<td><a href="aptus://audtoo_vkeybd" class="button1"><img src="images/gnome-audio.svg" class="appicon"><br />Vkeybd</a>
 		</td>
-		<td><a href="aptus://audtoo_vmpk" class="button1"><img src="images/gnome-audio.svg" class="appicon"><br />Vmpk</a>
-		</td>
 	</tr>
 	<tr>
+		<td><a href="aptus://audtoo_vmpk" class="button1"><img src="images/gnome-audio.svg" class="appicon"><br />Vmpk</a>
+		</td>
 		<td><a href="aptus://audtoo_wavbreaker" class="button1"><img src="images/gnome-audio.svg" class="appicon"><br />WavBreaker</a>
 		</td>
 		<td><a href="aptus://audtoo_yoshimi" class="button1"><img src="images/gnome-audio.svg" class="appicon"><br />Yoshimi</a>
