--- a/01-yad/lib/sparky-aptus-appcenter/net-webbrowser.html
+++ b/01-yad/lib/sparky-aptus-appcenter/net-webbrowser.html
@@ -3,7 +3,7 @@
 <!-- 
 APTus AppCenter by pavroo <pavroo@onet.eu> 2018
 License: GNU GPL 3
-Last update: October 18, 2020 by pavroo
+Last update: December 3, 2020 by pavroo
 -->
 	<head>
 		<title>Network -> Web Browsers | APTus AppCenter</title>
@@ -91,10 +91,12 @@ Last update: October 18, 2020 by pavroo
 		</td>
 		<td><a href="aptus://netweb_netsurf-gtk" class="button1"><img src="images0/netsurf.png" class="appicon"><br />NetSurf GTK</a>
 		</td>
-		<td><a href="aptus://netweb_opera-stable" class="button1"><img src="images/opera.svg" class="appicon"><br />Opera</a>
+		<td><a href="aptus://netweb_next" class="button1"><img src="images/terminal.svg" class="appicon"><br />Next</a>
 		</td>
 	</tr>
 	<tr>
+		<td><a href="aptus://netweb_opera-stable" class="button1"><img src="images/opera.svg" class="appicon"><br />Opera</a>
+		</td>
 		<td><a href="aptus://netweb_otter-browser" class="button1"><img src="images0/otter.png" class="appicon"><br />Otter</a>
 		</td>
 		<td><a href="aptus://netweb_palemoon" class="button1"><img src="images0/palemoon.png" class="appicon"><br />Pale Moon</a>
@@ -103,12 +105,14 @@ Last update: October 18, 2020 by pavroo
 		</td>
 		<td><a href="aptus://netweb_seamonkey" class="button1"><img src="images0/seamonkey.png" class="appicon"><br />SeaMonkey</a>
 		</td>
+	<td><a href="aptus://netweb_slimjet" class="button1"><img src="images/slimjet.svg" class="appicon"><br />Slimjet</a>
+		</td>
+	</tr>
+	<tr>
 		<td><a href="aptus://netweb_tor-browser" class="button1"><img src="images0/tor-browser.png" class="appicon"><br />TOR Browser</a>
 		</td>
 		<td><a href="aptus://netweb_vivaldi-stable" class="button1"><img src="images/vivaldi.svg" class="appicon"><br />Vivaldi</a>
 		</td>
-	</tr>
-	<tr>
 		<td><a href="aptus://netweb_w3m" class="button1"><img src="images/terminal.svg" class="appicon"><br />w3m</a>
 		</td>
 		<td><a href="aptus://netweb_waterfox-classic-kpe" class="button1"><img src="images/waterfox.svg" class="appicon"><br />Waterfox Classic</a>
