--- a/01-yad/lib/sparky-aptus-appcenter/system-backup.html
+++ b/01-yad/lib/sparky-aptus-appcenter/system-backup.html
@@ -3,7 +3,7 @@
 <!-- 
 APTus AppCenter by pavroo <pavroo@onet.eu> 2018
 License: GNU GPL 3
-Last update: September 16, 2020 by pavroo
+Last update: December 3, 2020 by pavroo
 -->
 	<head>
 		<title>System -> Backup | APTus AppCenter</title>
@@ -57,16 +57,18 @@ Last update: September 16, 2020 by pavroo
 		</td>
 		<td><a href="aptus://sysbac_gddrescue" class="button1"><img src="images/terminal.svg" class="appicon"><br />Gddrescue</a>
 		</td>
+		<td><a href="aptus://sysbac_grsync" class="button1"><img src="images/reload.svg" class="appicon"><br />Grsync</a>
+		</td>
 		<td><a href="aptus://sysbac_kbackup" class="button1"><img src="images/backup.svg" class="appicon"><br />Kbackup</a>
 		</td>
 		<td><a href="aptus://sysbac_kup-backup" class="button1"><img src="images/backup.svg" class="appicon"><br />Kup Backup</a>
 		</td>
 		<td><a href="aptus://sysbac_luckybackup" class="button1"><img src="images/backup.svg" class="appicon"><br />luckyBackup</a>
 		</td>
-		<td><a href="aptus://sysbac_partclone" class="button1"><img src="images/terminal.svg" class="appicon"><br />Partclone</a>
-		</td>
 	</tr>
 	<tr>
+		<td><a href="aptus://sysbac_partclone" class="button1"><img src="images/terminal.svg" class="appicon"><br />Partclone</a>
+		</td>
 		<td><a href="aptus://sysbac_partimage" class="button1"><img src="images/terminal.svg" class="appicon"><br />PartImage</a>
 		</td>
 		<td><a href="aptus://sysbac_partimage-server" class="button1"><img src="images/terminal.svg" class="appicon"><br />PartImage Server</a>
@@ -77,10 +79,10 @@ Last update: September 16, 2020 by pavroo
 		</td>
 		<td><a href="aptus://sysbac_rsync" class="button1"><img src="images/terminal.svg" class="appicon"><br />rsync</a>
 		</td>
-		<td><a href="aptus://sysbac_sparky-backup-core" class="button1"><img src="images/terminal.svg" class="appicon"><br />Sparky Backup Core</a>
-		</td>
 	</tr>
 	<tr>
+		<td><a href="aptus://sysbac_sparky-backup-core" class="button1"><img src="images/terminal.svg" class="appicon"><br />Sparky Backup Core</a>
+		</td>
 		<td><a href="aptus://sysbac_sparky-backup-sys" class="button1"><img src="images/sparky.svg" class="appicon"><br />Sparky Backup System</a>
 		</td>
 		<td><a href="aptus://sysbac_timeshift" class="button1"><img src="images/timeshift.svg" class="appicon"><br />Timeshift</a>
