--- a/01-yad/lib/sparky-aptus-appcenter/office-note.html
+++ b/01-yad/lib/sparky-aptus-appcenter/office-note.html
@@ -3,7 +3,7 @@
 <!-- 
 APTus AppCenter by pavroo <pavroo@onet.eu> 2018
 License: GNU GPL 3
-Last update: October 18, 2020 by pavroo
+Last update: December 15, 2020 by pavroo
 -->
 	<head>
 		<title>Office -> Notes | APTus AppCenter</title>
@@ -62,6 +62,8 @@ Last update: October 18, 2020 by pavroo
 		<td><a href="aptus://offnot_note" class="button1"><img src="images/tomboy.svg" class="appicon"><br />Note</a>
 		</td>
 		<td><a href="aptus://offnot_rhinote" class="button1"><img src="images/tomboy.svg" class="appicon"><br />Rhinote</a>
+		</td>
+		<td><a href="aptus://offnot_zettlr" class="button1"><img src="images/tomboy.svg" class="appicon"><br />Zettlr</a>
 		</td>
 	</tr>
 </tbody>
