--- a/01-yad/lib/sparky-aptus-appcenter/system-backup.html
+++ b/01-yad/lib/sparky-aptus-appcenter/system-backup.html
@@ -3,7 +3,7 @@
 <!-- 
 APTus AppCenter by pavroo <pavroo@onet.eu> 2018
 License: GNU GPL 3
-Last update: December 3, 2020 by pavroo
+Last update: December 15, 2020 by pavroo
 -->
 	<head>
 		<title>System -> Backup | APTus AppCenter</title>
@@ -75,12 +75,14 @@ Last update: December 3, 2020 by pavroo
 		</td>
 		<td><a href="aptus://sysbac_qt-fsarchiver" class="button1"><img src="images/backup.svg" class="appicon"><br />Qt FSArchiver</a>
 		</td>
+		<td><a href="aptus://sysbac_rescuezilla" class="button1"><img src="images/backup.svg" class="appicon"><br />Rescuezilla</a>
+		</td>
 		<td><a href="aptus://sysbac_restic" class="button1"><img src="images/terminal.svg" class="appicon"><br />restic</a>
 		</td>
+	</tr>
+	<tr>	
 		<td><a href="aptus://sysbac_rsync" class="button1"><img src="images/terminal.svg" class="appicon"><br />rsync</a>
 		</td>
-	</tr>
-	<tr>
 		<td><a href="aptus://sysbac_sparky-backup-core" class="button1"><img src="images/terminal.svg" class="appicon"><br />Sparky Backup Core</a>
 		</td>
 		<td><a href="aptus://sysbac_sparky-backup-sys" class="button1"><img src="images/sparky.svg" class="appicon"><br />Sparky Backup System</a>
