--- a/01-yad/lib/sparky-aptus-appcenter/system-others.html
+++ b/01-yad/lib/sparky-aptus-appcenter/system-others.html
@@ -3,7 +3,7 @@
 <!-- 
 APTus AppCenter by pavroo <pavroo@onet.eu> 2018
 License: GNU GPL 3
-Last update: October 19, 2020 by pavroo
+Last update: December 15, 2020 by pavroo
 -->
 	<head>
 		<title>System -> Others | APTus AppCenter</title>
@@ -43,16 +43,20 @@ Last update: October 19, 2020 by pavroo
 		</td>
 		<td><a href="aptus://sysoth_boot-repair" class="button1"><img src="images/default-icon.svg" class="appicon"><br />Boot Repair</a>
 		</td>
+		<td><a href="aptus://sysoth_cpufrequtils" class="button1"><img src="images/cpuinfo.svg" class="appicon"><br />CPUfrequtils</a>
+		</td>
+		<td><a href="aptus://sysoth_cpupower-gui" class="button1"><img src="images/cpuinfo.svg" class="appicon"><br />CPU Power GUI</a>
+		</td>
 		<td><a href="aptus://sysoth_fcitx" class="button1"><img src="images/fcitx.svg" class="appicon"><br />Fcitx</a>
 		</td>
 		<td><a href="aptus://sysoth_nvidia-settings" class="button1"><img src="images/nvidia.svg" class="appicon"><br />Nvidia Settings</a>
 		</td>
+	</tr>
+	<tr>
 		<td><a href="aptus://sysoth_sparky-eraser" class="button1"><img src="images1/bleachbit.svg" class="appicon"><br />Sparky Eraser</a>
 		</td>
 		<td><a href="aptus://sysoth_timekpr-next" class="button1"><img src="images/clock.svg" class="appicon"><br />Time Keeper Next</a>
 		</td>
-	</tr>
-	<tr>
 		<td><a href="aptus://sysoth_vulkan-tools" class="button1"><img src="images/default-icon.svg" class="appicon"><br />Vulkan Tools</a>
 		</td>
 		<td><a href="aptus://sysoth_webmin" class="button1"><img src="images/default-icon.svg" class="appicon"><br />Webmin</a>
